# quarkus-astro-app/src/main/webui/src/lib/api/model/index.ts
@@ -9,8 +9,12 @@
 export * from './categoryCreateDTO';
 export * from './categoryResponseDTO';
 export * from './categoryUpdateDTO';
+export * from './completionHistoryDTO';
+export * from './completionStatsDTO';
+export * from './getApiStatsHistoryParams';
 export * from './getApiTasksParams';
 export * from './getApiTasksStatus';
+export * from './localDate';
 export * from './localDateTime';
 export * from './priority';
 export * from './taskCreateDTO';
